PORTAL: style fixes

--- a/projects/portal/src/app/adverts/components/advert-add-dialog/advert-add-dialog.component.html
+++ b/projects/portal/src/app/adverts/components/advert-add-dialog/advert-add-dialog.component.html
@@ -161,6 +161,7 @@
           [allowUpload]="true"
           [allowDelete]="true"
           [uploadingInProgress]="uploadingAttachmentInProgress$ | async"
+          [removingInProgress]="deletingAttachmentInProgress$ | async"
           [showNoAttachmentsPlaceholder]="true"
           (select)="attachmentSelected($event)"
           (remove)="attachmentRemoved($event)">
