--- a/projects/portal/src/app/adverts/components/advert-details/advert-details.component.html
+++ b/projects/portal/src/app/adverts/components/advert-details/advert-details.component.html
@@ -25,7 +25,8 @@
       [attachments]="(selectedAdvert$ | async)?.attachments"
       [caption]="'Вложения'"
       [showCaptionIfNoAttachments]="false"
-      [showNoAttachmentsPlaceholder]="false">
+      [showNoAttachmentsPlaceholder]="false"
+      [allowDelete]="true">
     </app-attachments-list>
   </div>
 </div>
