--- a/projects/portal/src/app/adverts/components/attachments-list/attachments-list.component.less
+++ b/projects/portal/src/app/adverts/components/attachments-list/attachments-list.component.less
@@ -81,27 +81,26 @@
       }
 
       .properties {
-        font-weight: 300;
-        font-size: 12px;
-        line-height: 13px;
-        padding-top: 10px;
+        font-weight: 400;
+        font-size: 11px;
+        line-height: 12px;
+        padding-top: 5px;
         color: #78909c;
       }
     }
 
     .controls {
       display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: flex-start;
-      padding-left: 20px;
-
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+      padding-top: 10px;
 
       button, a {
-        margin-bottom: 5px;
+        margin-right: 10px;
 
         &:nth-last-of-type {
-          margin-bottom: 0px;
+          margin-right: 0px;
         }
       }
 
@@ -137,11 +136,9 @@ button, a  {
     line-height: 20px;
     font-weight: 700;
     text-decoration: none;
-    //color: #7986cb;
     color: white;
     background: #c5cae9;
     cursor: pointer;
-    // border: 1.5px solid #7986cb;
     border-radius: 2px;
     outline: none;
     transition: all linear 0.1s;
