--- a/projects/portal/src/app/adverts/components/attachments-list/attachments-list.component.less
+++ b/projects/portal/src/app/adverts/components/attachments-list/attachments-list.component.less
@@ -67,6 +67,7 @@
       flex-direction: column;
       justify-content: flex-start;
       flex: 1;
+      height: 70px;
       margin-left: 15px;
       font-family: 'Comfortaa', cursive;
 
