--- a/projects/portal/src/app/portal/components/start/start.component.html
+++ b/projects/portal/src/app/portal/components/start/start.component.html
@@ -306,7 +306,7 @@
         <div class="col-5">
           <div class="section">
             <div class="section-caption">Отсутствуют сегодня</div>
-            <div class="section-content">
+            <div class="section-markup">
               <div class="employee-list">
 
                 <div class="employee">
@@ -358,7 +358,7 @@
         <div class="col-7">
           <div class="section">
             <div class="section-caption">Дни рождения</div>
-            <div class="section-content highlighted">
+            <div class="section-markup highlighted">
               <div class="employee-list">
 
                 <div class="employee">
