--- a/projects/portal/src/styles/our-people-section.less
+++ b/projects/portal/src/styles/our-people-section.less
@@ -3,7 +3,7 @@
 .our-people {
   display: flex;
   flex-direction: row;
-  // justify-content: space-between;
+  // justify-markup: space-between;
   align-items: flex-end;
 
   .person {
