--- a/projects/portal/src/app/adverts/components/adverts-list/adverts-list.component.html
+++ b/projects/portal/src/app/adverts/components/adverts-list/adverts-list.component.html
@@ -42,7 +42,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row pt-5 mt-5">
   <div class="no-adverts-placeholder col-12"
        *ngIf="!(searchingInProgress$ | async) && (adverts$ | async).length === 0 && !(searchQuery$ | async)">
     Объявления отсутствуют
