--- a/projects/portal/src/app/portal/components/start/start.component.less
+++ b/projects/portal/src/app/portal/components/start/start.component.less
@@ -137,7 +137,7 @@
     .section-caption {
       display: flex;
       flex-direction: row;
-      justify-content: flex-start;
+      justify-markup: flex-start;
       font-family: 'Comfortaa', cursive;
       // font-family: 'Montserrat Alternates', sans-serif;
       font-size: 16px;
