PORTAL: Advert details modified, similar adverts added

--- a/projects/portal/src/app/adverts/components/attachments-list/attachments-list.component.less
+++ b/projects/portal/src/app/adverts/components/attachments-list/attachments-list.component.less
@@ -4,7 +4,7 @@
   flex: 1;
 
   .caption {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     font-family: 'Comfortaa', cursive;
     font-size: 14px;
     text-transform: uppercase;
@@ -65,7 +65,7 @@
     .details {
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
+      justify-content: space-between;
       flex: 1;
       height: 70px;
       margin-left: 15px;
