--- a/projects/portal/src/app/adverts/components/advert-details/advert-details.component.html
+++ b/projects/portal/src/app/adverts/components/advert-details/advert-details.component.html
@@ -1,50 +1,89 @@
-<div class="row align-items-center">
-  <div class="col">
-    <div class="row mt-md-3 align-items-start">
+<!-- Start: Заголовок объявления -->
+<div class="row pt-4 pb-4">
+
+  <div class="col-12 col-xl-8 pr-xl-4">
+    <div class="row">
       <div class="col-12">
-        <div class="section-caption small pb-0">
-          <a routerLink="/adverts">Объявления</a>
-          <span class="ml-2 mr-2">/</span>
-          <span>{{(selectedAdvert$ | async)?.title}}</span>
+        <a class="section-link" routerLink="/adverts">Объявления</a>
+        <div class="article-caption">{{(selectedAdvert)?.title}}</div>
+        <div class="article-attributes">
+          <span class="attribute">{{(selectedAdvert)?.dateCreatedD | date:'dd MMMM yyyy'}}</span>
         </div>
       </div>
     </div>
 
-    <div class="row align-items-start">
+    <!-- Start: Содержание объявления -->
+    <div class="row">
+      <!-- Start: Содержание объявления с вложениями -->
       <div class="col-12">
-        <div class="section-caption small">
-          <span class="attribute">{{(selectedAdvert$ | async)?.dateCreatedD | date:'dd MMMM yyyy'}}</span>
+        <!-- Start: Содержание объявления -->
+        <div class="advert-content pt-4" [innerHtml]="markup"></div>
+        <!-- End: Содержание объявления -->
+
+        <!-- Start: Вложения в объявлении -->
+        <div class="row mt-md-5">
+          <div class="col-12">
+            <app-attachments-list
+              [attachments]="(selectedAdvert$ | async)?.attachments"
+              [caption]="'Вложения'"
+              [showCaptionIfNoAttachments]="false"
+              [showNoAttachmentsPlaceholder]="false"
+              [allowDelete]="false">
+            </app-attachments-list>
+          </div>
+        </div>
+        <!-- End: Вложения в объявлении -->
+      </div>
+      <!-- End: Содержание объявления с вложениями -->
+    </div>
+    <!-- End: Содержание объявления -->
+  </div>
+
+  <!--Start: Похожие объявления, длок управления объявлением -->
+  <div class="col-12 col-xl-4 pl-xl-4 border-left">
+    <div class="row mb-4">
+      <div class="col-12 col-md-6 col-xl-12">
+        <div class="control-block p-4">
+          <div class="row">
+            <div class="col-12">
+              <div class="block-caption">Управление объявлением</div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <button class="kol-button w-100">Изменить</button>
+            </div>
+            <div class="col-6">
+              <button class="kol-button w-100" (click)="openRemoveAdvertDialog()">Удалить</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-12 col-md-6 col-xl-12">
+        <div class="control-block p-4">
+          <div class="row">
+            <div class="col-12">
+              <div class="block-caption">Похожие объявления</div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              similar adverts
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-
-  <div class="col-auto">
-    <button class="kol-button">
-      <mat-icon>edit</mat-icon> Изменить
-    </button>
-
-    <button class="kol-button ml-2" (click)="openRemoveAdvertDialog()">
-      <mat-icon>delete</mat-icon> Удалить
-    </button>
-  </div>
+  <!--End: Похожие объявления, длок управленяи объявлением -->
 </div>
+<!-- End: Заголовок объявления -->
 
 
 
 
-<div class="mt-3" [innerHtml]="markup"></div>
 
-<!-- Start: Вложения в объявлении -->
-<div class="row mt-md-5">
-  <div class="col-12">
-    <app-attachments-list
-      [attachments]="(selectedAdvert$ | async)?.attachments"
-      [caption]="'Вложения'"
-      [showCaptionIfNoAttachments]="false"
-      [showNoAttachmentsPlaceholder]="false"
-      [allowDelete]="false">
-    </app-attachments-list>
-  </div>
-</div>
-<!-- End: Вложения в объявлении -->
+
