--- a/projects/portal/src/app/portal/components/portal/portal.component.html
+++ b/projects/portal/src/app/portal/components/portal/portal.component.html
@@ -1,4 +1,5 @@
 <div id="app">
+  <!-- Start: Шапка приложения -->
   <header>
     <div class="background"></div>
     <div class="gradient">
@@ -20,8 +21,9 @@
       </div>
     </div>
   </header>
+  <!-- End: Шапка приложения -->
 
-
+  <!-- Start: Контент приложения -->
   <main id="app-content mb-4">
     <div class="row justify-content-center">
       <div class="col-11 col-md-11 col-lg-10 col-xl-10 pt-4 pb-4">
@@ -29,7 +31,9 @@
       </div>
     </div>
   </main>
+  <!-- End: Контент приложения -->
 
+  <!-- Start: Подвал приложения -->
   <footer>
     <div class="gradient">
       <div class="row justify-content-center">
@@ -44,6 +48,7 @@
     </div>
     <div class="background"></div>
   </footer>
+  <!-- End: Подвал приложения -->
 </div>
 
 
